src/objects/DContract__c.object
<CustomObject>
    <description>Tracks all of Dimagi&apos;s Contracts</description>
    <fields>
        <fullName>ALL_TIME_Income__c</fullName>
        <label>ALL TIME Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which account is the contract signed with.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>What is the a field this Contract is in. Can select multiple.</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture and Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services for the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Equality and Women&apos;s Empowerment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance and Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water, Sanitation, &amp; Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty and Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Education Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Backstop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who to escalate to for issues.</inlineHelpText>
        <label>Backstop</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Backstop</relationshipLabel>
        <relationshipName>Backstop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Expense_Income__c</fullName>
        <label>Billable Expense Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Travel__c</fullName>
        <label>Billable Travel</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Burdened_Income_Budget__c</fullName>
        <label>Burdened Income Budget</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>When the project actually ends.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>When the contract actually starts.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>FFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracting_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Business Unit that signed the contract with the customer (DSA, DSI, Inc).</inlineHelpText>
        <label>Contracting Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipName>Implementing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <inlineHelpText>The date the contract was signed.</inlineHelpText>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Contract_Execution__c</fullName>
        <label>Date of Contract Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Sub_Contract_BUDGET__c</fullName>
        <label>Direct Costs:Sub-Contract BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Sub_contract_Expenses__c</fullName>
        <label>Direct Costs:Sub-contract Expenses</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Travel_BUDGET__c</fullName>
        <label>Direct Costs:Travel BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Travel_Expenses__c</fullName>
        <label>Direct Costs:Travel Expenses</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which organization is providing the funding</inlineHelpText>
        <label>Funding Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FundingContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which organization is implementing the contract.</inlineHelpText>
        <label>Implementing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Implement_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intracompany_Sub_contract__c</fullName>
        <inlineHelpText>For internal accounting. Is this an internal subcontract between Dimagi business units?</inlineHelpText>
        <label>Intracompany Sub-contract</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_term_partnership_or_one_off__c</fullName>
        <label>Long term partnership or one-off</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_Component_Risks__c</fullName>
        <label>Major component risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prime_Contracting_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which business unit is actually doing the work on the project?</inlineHelpText>
        <label>Prime Contracting Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Contracts (Prime Contracting Business Unit)</relationshipLabel>
        <relationshipName>Prime_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Projects</inlineHelpText>
        <label>Project Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Dimagi PM</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Dropbox_Location__c</fullName>
        <inlineHelpText>Should be in Dimagi - Proposals</inlineHelpText>
        <label>Proposal Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contract_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Income__c</fullName>
        <label>Services Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <inlineHelpText>Pick the sub-area(s) that corresponds to the area(s) that you selected.</inlineHelpText>
        <label>Sub Area</label>
        <picklist>
            <picklistValues>
                <fullName>*** Agriculture and Food Security ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Economic Development ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Education and Training ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Emergency Response ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Financial Services for the Poor ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Cash Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services to the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Gender Equality and Women&apos;s Emp ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sex Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Governance and Accountability ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Health ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cervical Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Summary_Overview__c</fullName>
        <label>Summary / Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount_REMAINING__c</fullName>
        <label>Total Amount REMAINING</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Contract__c</fullName>
        <label>Total Amount of Contract</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Costs_BUDGET__c</fullName>
        <label>Total Direct Costs BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Costs_Expenses__c</fullName>
        <label>Total Direct Costs Expenses</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labor_Expenses__c</fullName>
        <label>Total Labor Expenses</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Income__c</fullName>
        <label>YTD Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Funder_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Implementing_Account__c</columns>
        <columns>Funder_Account__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contracts - Funder View</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>